Updated to Passky v8.0.0

--- a/passwords.html
+++ b/passwords.html
@@ -10,21 +10,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>Passky</title>
     <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
-    <link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="images/icons/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="images/icons/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-touch-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png" />
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/passwords.css">
     <link id="css-theme" type="text/css" rel="stylesheet" href="css/themes/dark.css">
     <script src="js/lang.js"></script>
     <script src="js/header.js"></script>
-    <script src="js/aes.js"></script>
+    <script src="js/XChaCha20.min.js"></script>
+		<script src="js/PasswordGenerator.min.js"></script>
   </head>
   <body class="primaryBackgroundColor">
     <nav class="secondaryBackgroundColor shadow">
@@ -44,17 +36,17 @@
               <a id="settings-link" href="settings.html" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Settings
               </a>
-              <a id="signout-link" href="#" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+              <span id="signout-link" role="button" class="mainMenuLink border-transparent inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Sign out
-              </a>
+							</span>
             </div>
           </div>
           <div class="flex-1 flex items-center justify-center px-2 lg:ml-6 lg:justify-end">
             <div class="flex-shrink-0">
               <span class="relative z-0 inline-flex shadow-sm rounded-md">
-                <input type="text" id="search" class="relative inline-flex shadow focus:outline-none px-4 py-2 sm:text-sm rounded-l-md" placeholder="Search">
+                <input type="text" id="search" class="relative inline-flex shadow focus:outline-none px-4 py-2 sm:text-sm rounded-l-md" enterKeyHint="Done" placeholder="Search">
                 <button id="add-password-btn" type="button" class="primaryButton relative inline-flex items-center px-2 py-2 border border-transparent shadow-sm text-sm font-medium rounded-r-md focus:outline-none">
-                  Add Password
+                  Add password
                 </button>
               </span>
             </div>
@@ -78,7 +70,7 @@
           <a id="passwords-link-mobile" href="#" class="mainMenuMobileLinkSelected block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Passwords</a>
           <a id="import-export-link-mobile" href="export.html" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Import & Export</a>
           <a id="settings-link-mobile" href="settings.html" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Settings</a>
-          <a id="signout-link-mobile" href="#" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Sign out</a>
+          <span id="signout-link-mobile" role="button" class="mainMenuMobileLink border-transparent block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Sign out</span>
         </div>
       </div>
     </nav>
@@ -91,16 +83,16 @@
               <div class="hidden mb-8 md:block">
                 <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
                   <div class="px-4 py-5 secondaryBackgroundColor shadow overflow-hidden sm:p-6">
-                    <dt class="text-sm font-medium secondaryColor truncate">Total Passwords</dt>
+                    <dt id="total-passwords" class="text-sm font-medium secondaryColor truncate">Total Passwords</dt>
                     <dd id="stats-passwords" class="mt-1 text-3xl font-semibold tertiaryColor">0</dd>
                   </div>
                   <div class="px-4 py-5 secondaryBackgroundColor shadow overflow-hidden sm:p-6">
-                    <dt class="text-sm font-medium secondaryColor truncate">Decryption Time</dt>
+                    <dt id="decryption-time" class="text-sm font-medium secondaryColor truncate">Decryption Time</dt>
                     <dd id="stats-loading-time" class="mt-1 text-3xl font-semibold tertiaryColor">0 ms</dd>
                   </div>
                   <div class="px-4 py-5 secondaryBackgroundColor shadow overflow-hidden sm:p-6">
-                    <dt class="text-sm font-medium secondaryColor truncate">Client Version</dt>
-                    <dd class="mt-1 text-3xl font-semibold tertiaryColor">7.1.0</dd>
+                    <dt id="client-version" class="text-sm font-medium secondaryColor truncate">Client Version</dt>
+                    <dd class="mt-1 text-3xl font-semibold tertiaryColor">8.0.0</dd>
                   </div>
                 </dl>
               </div>
@@ -108,49 +100,76 @@
                 <tbody id="table-data" class="secondaryBackgroundColor divide-y divide-gray-200">
                 </tbody>
               </table>
+							<div id="pagination" style="display: none;" class="flex items-center justify-between shadow passwordsBorderColor border-t secondaryBackgroundColor px-4 py-3 sm:px-6">
+								<div class="flex flex-1 items-center justify-between">
+									<div>
+										<p class="text-sm secondaryColor">
+											Showing
+											<span id="label-startFrom" class="font-medium">0</span>
+											to
+											<span id="label-stopOn" class="font-medium">0</span>
+											of
+											<span id="label-totalPasswords" class="font-medium">0</span>
+											passwords
+										</p>
+									</div>
+									<div>
+										<nav class="isolate inline-flex -space-x-px rounded-md shadow-sm" aria-label="Pagination">
+											<a id="pagination-left" href="?page=1" class="relative inline-flex items-center rounded-l-md border primaryBorderColor tertiaryBackgroundColor px-2 py-2 text-sm font-medium secondaryColor focus:z-20">
+												<span class="sr-only">Previous</span>
+												<svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+													<path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd" />
+												</svg>
+											</a>
+
+											<input id="page" type="number" value="5" min="1" max="5" class="relative inline-flex items-center border primaryBorderColor tertiaryBackgroundColor appearance-none text-center focus:outline-none px-4 py-2 text-sm font-medium secondaryColor">
+
+											<a id="pagination-right" href="?page=2" class="relative inline-flex items-center rounded-r-md border primaryBorderColor tertiaryBackgroundColor px-2 py-2 text-sm font-medium secondaryColor focus:z-20">
+												<span class="sr-only">Next</span>
+												<svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+													<path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
+												</svg>
+											</a>
+										</nav>
+									</div>
+								</div>
+							</div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div id="dialog" class="fixed z-10 inset-0 overflow-y-auto invisible" aria-labelledby="dialog-title" role="dialog" aria-modal="true">
-      <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
-        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-        <div class="secondaryBackgroundColor inline-block align-bottom rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
-          <div class="sm:flex sm:items-start">
-            <div id="dialog-icon" class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
-              <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
-              </svg>
-            </div>
-            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-              <h3 class="tertiaryColor text-lg leading-6 font-medium" id="dialog-title">
-                Delete account
-              </h3>
-              <div class="mt-2">
-                <p class="secondaryColor text-sm" id="dialog-text">
-                  Are you sure you want to delete your account? All of your data will be permanently removed from server forever. This action cannot be undone.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="mt-5 sm:mt-4 sm:ml-10 sm:pl-4 sm:flex">
-            <button id="dialog-button" type="button" class="dangerButton inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 text-base font-medium focus:outline-none sm:w-auto sm:text-sm">
-              Delete
-            </button>
-            <button id="dialog-button-cancel" type="button" class="cancelButton sm:ml-2 ml-0 mt-2 sm:mt-0 inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 text-base font-medium focus:outline-none sm:w-auto sm:text-sm">
-              Cancel
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
+		<div id="dialog" class="h-screen w-full fixed left-0 top-0 flex justify-center items-center z-10 inset-0 overflow-y-auto invisible" aria-labelledby="dialog-title" role="dialog" aria-modal="true">
+			<div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+			<span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+			<div class="secondaryBackgroundColor inline-block align-bottom rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all m-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+				<div class="sm:flex sm:items-start">
+					<div id="dialog-icon" class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+						<svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+						</svg>
+					</div>
+					<div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+						<h3 class="tertiaryColor text-lg leading-6 font-medium" id="dialog-title"></h3>
+						<div class="mt-2">
+							<p class="secondaryColor text-sm" id="dialog-text"></p>
+						</div>
+					</div>
+				</div>
+				<div class="mt-5 sm:mt-4 sm:ml-10 sm:pl-4 sm:flex">
+					<button id="dialog-button" type="button" class="dangerButton inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 text-base font-medium focus:outline-none sm:w-auto sm:text-sm">
+						Okay
+					</button>
+					<button id="dialog-button-cancel" type="button" class="cancelButton mt-2 w-full inline-flex justify-center rounded-md border px-4 py-2 text-base font-medium shadow-sm focus:outline-none sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+						Cancel
+					</button>
+				</div>
+			</div>
+		</div>
+
     <script src="js/default-functions.js"></script>
-    <script src="js/sha512.js"></script>
     <script src="js/PasskyAPI.js"></script>
     <script src="js/passwords.js"></script>
-    <script defer src="js/post-passwords.js"></script>
   </body>
 </html>
