--- a/register.html
+++ b/register.html
@@ -1,120 +1,181 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Passky is a simple, modern, lightweight, open-source and secure password manager." />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="theme-color" content="#0D1117" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <title>Passky</title>
-    <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
-    <link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="images/icons/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="images/icons/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-touch-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png" />
-    <link rel="stylesheet" href="css/tailwind.min.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link id="css-theme" type="text/css" rel="stylesheet" href="css/themes/dark.css">
-    <script src="js/lang.js"></script>
-    <script src="js/header.js"></script>
-  </head>
-  <body>
-    <div class="primaryBackgroundColor min-h-screen flex items-center justify-center py-6 px-4 sm:px-3 lg:px-8">
-      <div class="max-w-md w-full space-y-6">
-        <div>
-          <img class="mx-auto h-20 w-auto" src="images/logo.png" alt="Passky">
-        </div>
-        <form class="mt-8 space-y-6" id="signup-form">
-          <input type="hidden" name="remember" value="true">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content="Passky is a simple, modern, lightweight, open-source and secure password manager." />
+		<meta name="mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="theme-color" content="#0D1117" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<title>Passky</title>
+		<link rel="shortcut icon" type="image/png" href="images/logo.png"/>
+		<link rel="stylesheet" href="css/tailwind.min.css">
+		<link rel="stylesheet" href="css/index.css">
+		<link id="css-theme" type="text/css" rel="stylesheet" href="css/themes/dark.css">
+		<script src="js/lang.js"></script>
+		<script src="js/header.js"></script>
+	</head>
+	<body>
+		<div class="primaryBackgroundColor min-h-screen flex items-center justify-center py-6 px-4 sm:px-3 lg:px-8">
+			<div class="max-w-md w-full space-y-6">
+				<div>
+					<img class="mx-auto h-20 w-auto" src="images/logo.png" alt="Passky">
+				</div>
+				<form class="mt-8 space-y-6" id="signup-form">
+					<input type="hidden" name="remember" value="true">
 
-          <div class="rounded-md shadow-sm -space-y-px">
-            <div>
-              <label for="passky-server" class="sr-only">Server</label>
-              <input id="passky-server" list="servers" name="server" type="text" autocomplete="server" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none relative block w-full px-3 py-2 border rounded-t-md focus:outline-none focus:z-10 sm:text-sm" placeholder="Server">
-              <datalist id="servers">
-                <option>https://eu1.passky.org</option>
-                <option>https://eu2.passky.org</option>
-                <option>https://us1.passky.org</option>
-                <option>https://us2.passky.org</option>
-              </datalist>
-            </div>
-            <div>
-              <label for="username" class="sr-only">Username</label>
-              <input id="username" name="username" type="text" autocomplete="username" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none relative block w-full px-3 py-2 border focus:outline-none focus:z-10 sm:text-sm" placeholder="Username">
-            </div>
-            <div>
-                <label for="email" class="sr-only">Email</label>
-                <input id="email" name="email" type="email" autocomplete="email" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none relative block w-full px-3 py-2 border focus:outline-none focus:z-10 sm:text-sm" placeholder="Email">
-              </div>
-            <div>
-              <label for="password" class="sr-only">Password</label>
-              <input id="password" name="password" type="password" autocomplete="new-password" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none relative block w-full px-3 py-2 border rounded-b-md focus:outline-none focus:z-10 sm:text-sm" placeholder="Password">
-            </div>
-          </div>
-    
-          <fieldset>
-            <legend class="sr-only">Terms of Service</legend>
-            <div class="relative flex items-start">
-              <div class="flex items-center h-5">
-                <input type="checkbox" class="tertiaryBackgroundColor primaryColor h-4 w-4 primaryBorderColor rounded" required>
-              </div>
-              <div class="ml-3 text-sm">
-                <a id="tos" href="https://passky.org/ToS.pdf" target="_blank" class="primaryColor">Terms of Service</a>
-              </div>
-            </div>
-          </fieldset>
+					<div class="rounded-md shadow-sm -space-y-px">
+						<div>
+							<label for="passky-server" class="sr-only">Server</label>
+							<div class="flex rounded-md shadow-sm">
+								<div class="relative flex flex-grow items-stretch focus-within:z-10">
+									<div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+										<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 secondaryColor" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+											<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+											<rect x="3" y="4" width="18" height="8" rx="3"></rect>
+											<rect x="3" y="12" width="18" height="8" rx="3"></rect>
+											<line x1="7" y1="8" x2="7" y2="8.01"></line>
+											<line x1="7" y1="16" x2="7" y2="16.01"></line>
+											<path d="M11 8h6"></path>
+											<path d="M11 16h6"></path>
+										</svg>
+									</div>
+									<select id="passky-server2" class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none block w-full pl-10 px-3 py-2 border rounded-tl-md focus:outline-none sm:text-sm">
+										<option value="https://eu.passky.org" selected>Europe</option>
+										<option value="https://us.passky.org">America</option>
+									</select>
+									<input id="passky-server" name="server" type="text" autocomplete="server" style="display: none;" class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none block w-full pl-10 px-3 py-2 border rounded-tl-md focus:outline-none sm:text-sm" placeholder="Server">
+								</div>
+								<button id="server-picker" type="button" class="relative -ml-px inline-flex items-center space-x-2 border rounded-tr-md tertiaryBackgroundColor tertiaryColor primaryBorderColor px-4 py-2 text-sm font-medium focus:outline-none">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 secondaryColor" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+										<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+										<rect x="4" y="8" width="4" height="4"></rect>
+										<line x1="6" y1="4" x2="6" y2="8"></line>
+										<line x1="6" y1="12" x2="6" y2="20"></line>
+										<rect x="10" y="14" width="4" height="4"></rect>
+										<line x1="12" y1="4" x2="12" y2="14"></line>
+										<line x1="12" y1="18" x2="12" y2="20"></line>
+										<rect x="16" y="5" width="4" height="4"></rect>
+										<line x1="18" y1="4" x2="18" y2="5"></line>
+										<line x1="18" y1="9" x2="18" y2="20"></line>
+								 </svg>
+								</button>
+							</div>
+						</div>
+						<div>
+							<label for="username" class="sr-only">Username</label>
+							<div class="relative rounded-md shadow-sm">
+								<div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 secondaryColor" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+										<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+										<circle cx="12" cy="7" r="4"></circle>
+										<path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path>
+									</svg>
+								</div>
+								<input id="username" name="username" type="text" autocomplete="username" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none block w-full pl-10 px-3 py-2 border focus:outline-none focus:z-10 sm:text-sm" placeholder="Username">
+							</div>
+						</div>
+						<div>
+							<label for="email" class="sr-only">Email</label>
+							<div class="relative rounded-md shadow-sm">
+								<div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 secondaryColor" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+										<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+										<rect x="3" y="5" width="18" height="14" rx="2"></rect>
+										<polyline points="3 7 12 13 21 7"></polyline>
+									</svg>
+								</div>
+								<input id="email" name="email" type="email" autocomplete="email" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none block w-full pl-10 px-3 py-2 border focus:outline-none focus:z-10 sm:text-sm" placeholder="Email">
+							</div>
+						</div>
+						<div>
+							<label for="password" class="sr-only">Password</label>
+							<div class="flex rounded-md shadow-sm">
+								<div class="relative flex flex-grow items-stretch focus-within:z-10">
+									<div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+										<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 secondaryColor" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+											<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+											<circle cx="8" cy="15" r="4"></circle>
+											<line x1="10.85" y1="12.15" x2="19" y2="4"></line>
+											<line x1="18" y1="5" x2="20" y2="7"></line>
+											<line x1="15" y1="8" x2="17" y2="10"></line>
+										</svg>
+									</div>
+									<input id="password" name="password" type="password" autocomplete="new-password" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none block w-full pl-10 px-3 py-2 border focus:outline-none sm:text-sm" placeholder="Password">
+								</div>
+								<button id="password-hider" type="button" class="relative -ml-px inline-flex items-center space-x-2 border tertiaryBackgroundColor tertiaryColor primaryBorderColor px-4 py-2 text-sm font-medium focus:outline-none">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 secondaryColor" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+										<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+										<circle cx="12" cy="12" r="2"></circle>
+										<path d="M22 12c-2.667 4.667 -6 7 -10 7s-7.333 -2.333 -10 -7c2.667 -4.667 6 -7 10 -7s7.333 2.333 10 7"></path>
+								 </svg>
+								</button>
+							</div>
+						</div>
+						<div class="bg-gradient-to-r from-red-500 to-green-500 primaryBorderColor appearance-none rounded-b-md relative block w-full border overflow-hidden">
+							<div id="entropy" class="h-1.5 tertiaryBackgroundColor tertiaryColor float-right" style="width: 100%"></div>
+							<div class="h-1.5 w-[1px] primaryBackgroundColor absolute left-[75%]"></div>
+						</div>
+					</div>
 
-          <div id="error-dialog" class="fixed z-10 inset-0 overflow-y-auto invisible" aria-labelledby="error-dialog-modal-title" role="dialog" aria-modal="true">
-            <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-              <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
-              <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-              <div class="secondaryBackgroundColor inline-block align-bottom rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-sm sm:w-full sm:p-6">
-                <div>
-                  <div id="dialog-icon" class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-red-100">
-                    <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
-                    </svg>
-                  </div>
-                  <div class="mt-3 text-center sm:mt-5">
-                    <h3 class="tertiaryColor text-lg leading-6 font-medium" id="error-dialog-modal-title">
-                      ERROR
-                    </h3>
-                    <div class="mt-2">
-                      <p id="error-dialog-modal-text" class="secondaryColor text-sm">
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="mt-5 sm:mt-6">
-                  <button id="btn-dialog" type="button" class="dangerButton inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 text-base focus:outline-none font-medium sm:text-sm">
-                    Okay
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
+					<fieldset>
+						<legend class="sr-only">Terms of Service</legend>
+						<div class="relative flex items-start">
+							<div class="flex items-center h-5">
+								<input type="checkbox" class="tertiaryBackgroundColor primaryColor h-4 w-4 primaryBorderColor rounded" required>
+							</div>
+							<div class="ml-3 text-sm">
+								<a id="tos" href="https://passky.org/ToS.pdf" target="_blank" class="primaryColor">Terms of Service</a>
+							</div>
+						</div>
+					</fieldset>
 
-          <div class="text-center">
-            <button id="btn_signup" type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none">
-              Sign up
-            </button>
-            <button id="btn_signin" type="button" class="cancelButton group relative w-full flex justify-center my-2 py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none">
-              Sign in
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-    <script src="js/default-functions.js"></script>
-    <script src="js/sha512.js"></script>
-    <script src="js/PasskyAPI.js"></script>
-    <script src="js/register.js"></script>
-  </body>
+					<div class="text-center">
+						<button id="btn_signup" type="submit" class="primaryButton group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none">
+							Sign up
+						</button>
+						<button id="btn_signin" type="button" class="cancelButton group relative w-full flex justify-center my-2 py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white focus:outline-none">
+							Sign in
+						</button>
+					</div>
+				</form>
+			</div>
+		</div>
+
+		<div id="dialog" class="h-screen w-full fixed left-0 top-0 flex justify-center items-center z-10 inset-0 overflow-y-auto invisible" aria-labelledby="dialog-title" role="dialog" aria-modal="true">
+			<div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+			<span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+			<div class="secondaryBackgroundColor inline-block align-bottom rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all m-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+				<div class="sm:flex sm:items-start">
+					<div id="dialog-icon" class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+						<svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+						</svg>
+					</div>
+					<div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+						<h3 class="tertiaryColor text-lg leading-6 font-medium" id="dialog-title"></h3>
+						<div class="mt-2">
+							<p class="secondaryColor text-sm" id="dialog-text"></p>
+						</div>
+					</div>
+				</div>
+				<div class="mt-5 sm:mt-4 sm:ml-10 sm:pl-4 sm:flex">
+					<button id="dialog-button" type="button" class="dangerButton inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 text-base font-medium focus:outline-none sm:w-auto sm:text-sm">
+						Okay
+					</button>
+					<button id="dialog-button-cancel" type="button" class="cancelButton mt-2 w-full inline-flex justify-center rounded-md border px-4 py-2 text-base font-medium shadow-sm focus:outline-none sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+						Cancel
+					</button>
+				</div>
+			</div>
+		</div>
+
+		<script src="js/default-functions.js"></script>
+		<script src="js/PasswordEntropy.min.js"></script>
+		<script src="js/PasskyAPI.js"></script>
+		<script src="js/Argon2idWorker.min.js"></script>
+		<script src="js/Argon2id.min.js"></script>
+		<script src="js/register.js"></script>
+	</body>
 </html>
