--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="primaryBackgroundColor min-h-screen flex items-center justify-center py-6 px-4 sm:px-3 lg:px-8">
       <div class="max-w-md w-full space-y-6">
         <div>
-          <img class="mx-auto h-20 w-auto" src="images/logo.png" alt="Passky">
+          <img id="passky-logo" class="mx-auto h-20 w-auto" src="images/logo.png" alt="Passky">
         </div>
         <form id="login_form" class="mt-8 space-y-6">
           <input type="hidden" name="remember" value="true">
