--- a/settings.html
+++ b/settings.html
@@ -86,6 +86,7 @@
 								<option value="de">German</option>
 								<option value="el">Greek</option>
 								<option value="hi">Hindi</option>
+								<option value="hu">Hungarian</option>
 								<option value="id">Indonesian</option>
 								<option value="it">Italian</option>
 								<option value="ja">Japanese</option>
@@ -105,7 +106,7 @@
 								<option value="vi">Vietnamese</option>
 							</select>
 						</div>
-						<label id="info-language" class="secondaryColor block text-sm font-medium sm:mt-px sm:pt-2">
+						<label id="info-language" class="secondaryColor block text-sm font-medium mt-px pt-2">
 							Missing language? Translate it on <a class="primaryColor" href="https://crowdin.com/project/passky" target="_blank">Crowdin</a>.
 						</label>
 					</div>
@@ -160,7 +161,7 @@
 								Enable
 							</button>
 						</div>
-						<label id="info-website-icons" class="secondaryColor block text-sm font-medium sm:mt-px sm:pt-2">
+						<label id="info-website-icons" class="secondaryColor block text-sm font-medium mt-px pt-2">
 							Enabling website icons might reduce your privacy.
 						</label>
 					</div>
@@ -176,7 +177,7 @@
 								Enable
 							</button>
 						</div>
-						<label id="info-auto-search" class="secondaryColor block text-sm font-medium sm:mt-px sm:pt-2">
+						<label id="info-auto-search" class="secondaryColor block text-sm font-medium mt-px pt-2">
 							Only available in the browser extension.
 						</label>
 					</div>
@@ -229,14 +230,14 @@
 											<line x1="15" y1="8" x2="17" y2="10"></line>
 										</svg>
 									</div>
-									<input id="license-key" name="license-key" type="text" autocomplete="off" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-l-md block w-full pl-10 px-4 py-2 border focus:outline-none focus:z-10 sm:text-sm" placeholder="License Key">
+									<input id="license-key" name="license-key" type="text" autocomplete="off" required class="tertiaryBackgroundColor tertiaryColor appearance-none rounded-l-md block w-full pl-10 px-4 py-2 focus:outline-none focus:z-10 sm:text-sm" placeholder="License Key">
 								</div>
 							</div>
-							<button id="validate-license-btn" type="button" class="flex-initial successButton font-bold inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-r-md focus:outline-none sm:text-sm">
+							<button id="validate-license-btn" type="button" class="successButton relative inline-flex items-center px-2 py-2 shadow-sm rounded-r-md sm:text-sm focus:outline-none">
 								Validate
 							</button>
 						</div>
-						<label id="info-upgrade-account" class="secondaryColor block text-sm font-medium sm:mt-px sm:pt-2">
+						<label id="info-upgrade-account" class="secondaryColor block text-sm font-medium mt-px pt-2">
 							<ul>
 								<li id="account-type">Account: <b>Free</b></li>
 								<li id="account-expiration">Expiration: <b>Never</b></li>
