--- a/passwords.html
+++ b/passwords.html
@@ -92,7 +92,7 @@
                   </div>
                   <div class="px-4 py-5 secondaryBackgroundColor shadow overflow-hidden sm:p-6">
                     <dt id="client-version" class="text-sm font-medium secondaryColor truncate">Client Version</dt>
-                    <dd class="mt-1 text-3xl font-semibold tertiaryColor">8.0.0</dd>
+                    <dd class="mt-1 text-3xl font-semibold tertiaryColor">8.0.1</dd>
                   </div>
                 </dl>
               </div>
@@ -169,6 +169,7 @@
 		</div>
 
     <script src="js/default-functions.js"></script>
+		<script src="js/PasswordEntropy.min.js"></script>
     <script src="js/PasskyAPI.js"></script>
     <script src="js/passwords.js"></script>
   </body>
