--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link id="css-theme" type="text/css" rel="stylesheet" href="css/themes/dark.css">
-    <link rel="manifest" href="manifest.json">
     <script src="js/lang.js"></script>
     <script src="js/header.js"></script>
   </head>
@@ -89,7 +88,7 @@
 										<line x1="15" y1="8" x2="17" y2="10"></line>
 									</svg>
 								</div>
-								<input id="password" name="password" type="password" autocomplete="current-password" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none block w-full pl-10 px-3 py-2 border focus:outline-none focus:z-10 sm:text-sm" placeholder="Password">
+								<input id="password" name="password" type="password" autocomplete="off" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none block w-full pl-10 px-3 py-2 border focus:outline-none focus:z-10 sm:text-sm" placeholder="Password">
 							</div>
             </div>
             <div>
@@ -157,7 +156,6 @@
     <script src="js/default-functions.js"></script>
 		<script src="js/PasswordEntropy.min.js"></script>
     <script src="js/PasskyAPI.js"></script>
-		<script src="js/Argon2idWorker.min.js"></script>
 		<script src="js/Argon2id.min.js"></script>
     <script src="js/login.js"></script>
   </body>
