--- a/register.html
+++ b/register.html
@@ -102,7 +102,7 @@
 											<line x1="15" y1="8" x2="17" y2="10"></line>
 										</svg>
 									</div>
-									<input id="password" name="password" type="password" autocomplete="new-password" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none block w-full pl-10 px-3 py-2 border focus:outline-none sm:text-sm" placeholder="Password">
+									<input id="password" name="password" type="password" autocomplete="off" required class="tertiaryBackgroundColor tertiaryColor primaryBorderColor appearance-none rounded-none block w-full pl-10 px-3 py-2 border focus:outline-none sm:text-sm" placeholder="Password">
 								</div>
 								<button id="password-hider" type="button" class="relative -ml-px inline-flex items-center space-x-2 border tertiaryBackgroundColor tertiaryColor primaryBorderColor px-4 py-2 text-sm font-medium focus:outline-none">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 secondaryColor" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -174,7 +174,6 @@
 		<script src="js/default-functions.js"></script>
 		<script src="js/PasswordEntropy.min.js"></script>
 		<script src="js/PasskyAPI.js"></script>
-		<script src="js/Argon2idWorker.min.js"></script>
 		<script src="js/Argon2id.min.js"></script>
 		<script src="js/register.js"></script>
 	</body>
